# native-suck

./: .gitignore  CMakeLists.txt  README.md  nvs.csv  partitions.csv  sdkconfig
CAD/: ac400.kicad_pcb  ac400.kicad_prl  ac400.kicad_pro  ac400.kicad_sch  fp-info-cache
components/net-logging/: net_logging.c  udp_client.c
data/: index.html
main/: CMakeLists.txt  ac400_util.c  ac400_util.h  button_controller.c  button_controller.h  constants.h  display.c  env_sensor.c  env_sensor.h  esp_zigbee_gateway.c  esp_zigbee_gateway.h  idf_component.yml  main.c  nvs_store.c  nvs_store.h  ota_updater.c  ota_updater.h  relay_controller.c  relay_controller.h  state.c  state.h  webserver.c  webserver.h  wlan.c  wlan.h
